--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,29 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-version>4.3.18.RELEASE</spring-version>
+        <spring.boot-version>1.5.22.RELEASE</spring.boot-version>
+        <!--<spring.boot-version>2.3.12.RELEASE</spring.boot-version>-->
         <!--<spring-version>4.3.30.RELEASE</spring-version>-->
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+            <!--<version>0.2.12</version>-->
+            <!--<version>0.2.6</version>-->
+            <!--<version>0.2.3</version>-->
+            <!--<version>0.2.0</version>-->
+            <version>0.1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>1.5.22.RELEASE</version>
+            <version>${spring.boot-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
