--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,26 @@
         <spring.boot-version>1.5.22.RELEASE</spring.boot-version>
         <!--<spring.boot-version>2.3.12.RELEASE</spring.boot-version>-->
         <!--<spring-version>4.3.30.RELEASE</spring-version>-->
+        <jmh-version>1.36</jmh-version>
+        <!--<jmh-version>1.34</jmh-version>-->
+        <!--<jmh-version>1.33</jmh-version>-->
+        <!--<jmh-version>1.32</jmh-version>-->
+        <!--<jmh-version>1.29</jmh-version>-->
+        <!--<jmh-version>1.21</jmh-version>-->
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh-version}</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh-version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
