--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,19 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.atp-fivt</groupId>
-            <artifactId>ljv</artifactId>
-            <version>1.04</version>
-            <!--<version>1.03</version>-->
-            <!--<version>1.02</version>-->
-            <!--<version>1.01</version>-->
-            <!--<version>1.0</version>-->
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.3.0</version>
         </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.atp-fivt</groupId>-->
+        <!--    <artifactId>ljv</artifactId>-->
+        <!--    <version>1.04</version>-->
+        <!--    &lt;!&ndash;<version>1.03</version>&ndash;&gt;-->
+        <!--    &lt;!&ndash;<version>1.02</version>&ndash;&gt;-->
+        <!--    &lt;!&ndash;<version>1.01</version>&ndash;&gt;-->
+        <!--    &lt;!&ndash;<version>1.0</version>&ndash;&gt;-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.openjdk.jol</groupId>
@@ -274,8 +279,8 @@
                 <version>3.1</version>
                 <configuration>
                     <debug>false</debug>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
             <!-- maven tomcat插件用 -->
