去除 nacos fix start error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8090
 
-# nacos 配置
-nacos.config.server-addr=192.168.1.5:8848
-# 接入nacos 方法一，同NacosPropertySource
-nacos.config.type=properties
-nacos.config.auto-refresh=true
-nacos.config.group=test
-nacos.config.data-id=nacos.cfg.dataId
-nacos.config.bootstrap.enable=true
-nacos.config.bootstrap.log-enable=true
+## nacos 配置
+#nacos.config.server-addr=192.168.1.5:8848
+## 接入nacos 方法一，同NacosPropertySource
+#nacos.config.type=properties
+#nacos.config.auto-refresh=true
+#nacos.config.group=test
+#nacos.config.data-id=nacos.cfg.dataId
+#nacos.config.bootstrap.enable=true
+#nacos.config.bootstrap.log-enable=true
 
 #logging.level.root=debug
