--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,11 @@
             <artifactId>rxjava</artifactId>
             <version>1.3.8</version>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.3.0</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.mybatis.spring.boot</groupId>-->
+        <!--    <artifactId>mybatis-spring-boot-starter</artifactId>-->
+        <!--    <version>2.3.0</version>-->
+        <!--</dependency>-->
         <!--<dependency>-->
         <!--    <groupId>org.atp-fivt</groupId>-->
         <!--    <artifactId>ljv</artifactId>-->
@@ -111,11 +111,11 @@
             <version>3.12.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>4.0.3</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>com.zaxxer</groupId>-->
+        <!--    <artifactId>HikariCP</artifactId>-->
+        <!--    <version>4.0.3</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
