--- a/test-zk/pom.xml
+++ b/test-zk/pom.xml
@@ -23,6 +23,22 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.curator</groupId>-->
+        <!--    <artifactId>curator-framework</artifactId>-->
+        <!--    <version>4.0.0</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>4.2.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>zookeeper</artifactId>
+                    <groupId>org.apache.zookeeper</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
