--- a/test-base/pom.xml
+++ b/test-base/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>skywalker</groupId>
-        <artifactId>spring</artifactId>
+        <groupId>com.example</groupId>
+        <artifactId>all-in-one</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
