--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>test-spring</module>
         <module>test-spring-boot</module>
         <module>test-nacos</module>
+        <module>test-rocketmq</module>
     </modules>
 
     <properties>
