--- a/shorten/src/main/resources/application.properties
+++ b/shorten/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8888
+spring.application.name=shorten-service
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shorten?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root1234
 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
