--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>test-spring-boot</module>
         <module>test-nacos</module>
         <module>test-rocketmq</module>
+        <module>shorten</module>
     </modules>
 
     <properties>
