--- a/test-rocketmq/pom.xml
+++ b/test-rocketmq/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>5.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client-java</artifactId>
             <version>5.0.4</version>
         </dependency>
