--- a/test-base/pom.xml
+++ b/test-base/pom.xml
@@ -183,6 +183,17 @@
             <!--<version>0.2.3</version>-->
             <!--<version>0.2.0</version>-->
             <version>0.1.10</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>reflections</artifactId>
+                    <groupId>org.reflections</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
