--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-version>4.3.18.RELEASE</spring-version>
-        <spring.boot-version>1.5.22.RELEASE</spring.boot-version>
+        <!--<spring.boot-version>1.5.22.RELEASE</spring.boot-version>-->
         <!--<spring.boot-version>2.3.12.RELEASE</spring.boot-version>-->
+        <spring.boot-version>2.5.15</spring.boot-version>
+        <!--<spring.boot-version>2.6.15</spring.boot-version>-->
+        <!--<spring.boot-version>2.7.18</spring.boot-version>-->
         <!--<spring-version>4.3.30.RELEASE</spring-version>-->
         <jmh-version>1.36</jmh-version>
         <!--<jmh-version>1.34</jmh-version>-->
