--- a/shorten/src/main/resources/application.properties
+++ b/shorten/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8888
 spring.application.name=shorten-service
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shorten?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1234
