--- a/test-mybatis-plus/src/main/resources/application.properties
+++ b/test-mybatis-plus/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mp
+spring.datasource.username=root
+spring.datasource.password=root1234
 
+spring.sql.init.schema-locations=classpath:db/schema-mysql.sql
+spring.sql.init.data-locations=classpath:db/data-mysql.sql
