--- a/test-spring-cloud/pom.xml
+++ b/test-spring-cloud/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>test-eureka-server</module>
+        <module>test-eureka-client</module>
         <module>demo</module>
     </modules>
 
