增加 a,b,c 三个服务进行测试

--- a/test-spring-cloud/pom.xml
+++ b/test-spring-cloud/pom.xml
@@ -15,6 +15,9 @@
     <modules>
         <module>test-eureka-server</module>
         <module>test-eureka-client</module>
+        <module>test-eureka-client-a</module>
+        <module>test-eureka-client-b</module>
+        <module>test-eureka-client-c</module>
         <module>demo</module>
     </modules>
 
