--- a/test-spring-cloud/pom.xml
+++ b/test-spring-cloud/pom.xml
@@ -18,6 +18,7 @@
         <module>test-eureka-client-a</module>
         <module>test-eureka-client-b</module>
         <module>test-eureka-client-c</module>
+        <module>test-openfegin-api</module>
         <module>demo</module>
     </modules>
 
